--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <ul> <div class="nav2">
                 <li> <a href="">HOMEPAGE</a></li>
                 <li> <a href="">BLOG</a></li>
-                <li> <a href="../PAGE2/">ABOUT US</a></li>
+                <li> <a href="./PAGE2/index.html">ABOUT US</a></li>
                 <li> <a href="">CONTACT</a></li>
 
              </div>
